horizontal scroll was fixed

--- a/src/styles/blocks/for-whom.scss
+++ b/src/styles/blocks/for-whom.scss
@@ -296,7 +296,7 @@
     color: $blue;
     transform: rotate(90deg);
     top: 0;
-    right: -65px;
+    right: -60px;
     width: max-content;
     transition: all 0.3s;
 
