--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -127,16 +127,7 @@
     }
   }
 
-  &__closed {
-
-  }
-
   &__relative {
     position: relative;
-    /* display: none; */
-
-    &.show {
-      /* display: block; */
-    }
   }
 }
